--- a/app/src/main/res/layout/campania_evento_fragment.xml
+++ b/app/src/main/res/layout/campania_evento_fragment.xml
@@ -56,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="PDF"
+                android:visibility="gone"
                 android:layout_margin="10dp"/>
             <Button
                 android:id="@+id/btn_add_paciente_campaña"
