--- a/app/src/main/res/layout/paciente_detalle_fragment.xml
+++ b/app/src/main/res/layout/paciente_detalle_fragment.xml
@@ -31,7 +31,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="330dp"
             android:layout_margin="15dp"
             app:cardCornerRadius="30dp">
 
@@ -42,7 +42,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
+                    android:layout_weight="3.5"
                     android:orientation="horizontal"
                     android:background="@color/katzen_verde">
 
@@ -87,6 +87,23 @@
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:cardCornerRadius="50dp">
+                            <ImageView
+                                android:id="@+id/imgPerfil"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/ic_person"></ImageView>
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -269,7 +286,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1" />
 
-        <LinearLayout
+       <!-- <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -282,7 +299,7 @@
                 android:text="Paciente"
                 android:drawableLeft="@drawable/ic_mas_blanco"
                 android:layout_margin="10dp"/>
-        </LinearLayout>
+        </LinearLayout>-->
 
     </LinearLayout>
 
