--- a/app/src/main/res/layout/cliente_list_fragment.xml
+++ b/app/src/main/res/layout/cliente_list_fragment.xml
@@ -49,6 +49,7 @@
                     android:layout_weight="1"
                     android:gravity="bottom|center"
                     android:maxLines="1"
+                    android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/black"
                     android:text="Luis Alfonso Niño Mtz"
                     android:textStyle="bold"
@@ -68,6 +69,7 @@
                         android:layout_weight="1"
                         android:layout_margin="5dp"
                         android:gravity="bottom|center"
+                        android:fontFamily="@font/poppins_regular"
                         android:maxLines="1"
                         android:textColor="@color/black"
                         android:text="Expediente: "
@@ -81,6 +83,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:layout_margin="5dp"
+                        android:fontFamily="@font/poppins_light"
                         android:gravity="bottom|center"
                         android:maxLines="1"
                         android:textColor="@color/red_A700"
