--- a/app/src/main/res/layout/view_campania_evento_detalle.xml
+++ b/app/src/main/res/layout/view_campania_evento_detalle.xml
@@ -34,6 +34,7 @@
                         android:gravity="center"
                         android:maxLines="1"
                         android:text="17"
+                        android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         app:autoSizeMaxTextSize="45sp"
@@ -64,6 +65,7 @@
                         android:maxLines="1"
                         android:text="Fecha: "
                         android:textStyle="bold"
+                        android:fontFamily="@font/poppins_regular"
                         app:autoSizeMaxTextSize="18sp"
                         app:autoSizeMinTextSize="10sp"
                         app:autoSizeTextType="uniform" />
@@ -77,6 +79,7 @@
                         android:gravity="center"
                         android:maxLines="1"
                         android:text="17/06/2024"
+                        android:fontFamily="@font/poppins_regular"
                         android:textStyle="bold"
                         app:autoSizeMaxTextSize="18sp"
                         app:autoSizeMinTextSize="10sp"
@@ -109,6 +112,7 @@
                             android:layout_weight="1"
                             android:maxLines="1"
                             android:text="17"
+                            android:fontFamily="@font/poppins_bold"
                             android:textColor="@color/black"
                             android:textStyle="bold"
                             app:autoSizeMaxTextSize="45sp"
