--- a/app/src/main/res/layout/add_cliente_fragment.xml
+++ b/app/src/main/res/layout/add_cliente_fragment.xml
@@ -295,6 +295,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="5dp"
+                            android:fontFamily="@font/poppins_bold"
                             android:layout_weight="1"
                             android:text="Cancelar" />
 
@@ -304,6 +305,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="5dp"
+                            android:fontFamily="@font/poppins_bold"
                             android:layout_weight="1"
                             android:text="Guardar" />
 
