--- a/app/src/main/res/layout/add_viaje_fragment.xml
+++ b/app/src/main/res/layout/add_viaje_fragment.xml
@@ -164,12 +164,14 @@ android:layout_height="match_parent">
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:fontFamily="@font/poppins_bold"
                 android:layout_margin="5dp"
                 android:text="Cancelar"/>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_guardar"
                 android:layout_weight="1"
                 style="@style/Widget.MaterialComponents.Button"
+                android:fontFamily="@font/poppins_bold"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -179,6 +181,7 @@ android:layout_height="match_parent">
                 android:layout_weight="1"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
+                android:fontFamily="@font/poppins_bold"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:text="Editar"/>
