--- a/app/src/main/res/layout/cliente_fragment.xml
+++ b/app/src/main/res/layout/cliente_fragment.xml
@@ -57,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Cliente"
+                android:fontFamily="@font/poppins_bold"
                 android:drawableLeft="@drawable/ic_mas_blanco"
                 android:layout_margin="10dp"/>
         </LinearLayout>
