--- a/app/src/main/res/layout/fragment_gasolina.xml
+++ b/app/src/main/res/layout/fragment_gasolina.xml
@@ -18,7 +18,7 @@
             android:text="Gasolina"
             android:textColor="@color/black"
             android:textSize="26dp"
-            android:fontFamily="@font/varela"
+            android:fontFamily="@font/poppins_black"
             android:textStyle="bold"
             android:gravity="center"/>
         <androidx.cardview.widget.CardView
@@ -45,7 +45,7 @@
                         android:id="@+id/sp_categorias"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:fontFamily="@font/varela"
+                        android:fontFamily="@font/poppins_regular"
                         android:textColor="@color/black"
                         app:hintTextColor="@color/black"
                         android:textColorHint="@color/black"
@@ -68,7 +68,7 @@
                         android:digits="0123456789."
                         android:imeOptions="actionDone"
                         app:hintTextColor="@color/black"
-                        android:fontFamily="@font/varela"
+                        android:fontFamily="@font/poppins_regular"
                         android:textColor="@color/black"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -109,7 +109,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="@string/title_dinero"
                                     android:gravity="center"
-                                    android:fontFamily="@font/varela"
+                                    android:fontFamily="@font/poppins_regular"
                                     android:textSize="22dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"/>
@@ -118,7 +118,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Costo"
                                     android:gravity="center"
-                                    android:fontFamily="@font/varela"
+                                    android:fontFamily="@font/poppins_light"
                                     android:textSize="15dp"
                                     android:textStyle="normal"
                                     android:textColor="@color/black"/>
@@ -140,7 +140,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="@string/title_dinero"
                                 android:gravity="center"
-                                android:fontFamily="@font/varela"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="22dp"
                                 android:textStyle="bold"
                                 android:textColor="@color/black"/>
@@ -149,7 +149,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Ganancia"
                                 android:gravity="center"
-                                android:fontFamily="@font/varela"
+                                android:fontFamily="@font/poppins_light"
                                 android:textSize="15dp"
                                 android:textStyle="normal"
                                 android:textColor="@color/black"/>
@@ -171,7 +171,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="@string/title_dinero"
                                     android:gravity="center"
-                                    android:fontFamily="@font/varela"
+                                    android:fontFamily="@font/poppins_regular"
                                     android:textSize="22dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"/>
@@ -180,7 +180,7 @@
                                     android:layout_height="wrap_content"
                                     android:text="Venta"
                                     android:gravity="center"
-                                    android:fontFamily="@font/varela"
+                                    android:fontFamily="@font/poppins_light"
                                     android:textSize="15dp"
                                     android:textStyle="normal"
                                     android:textColor="@color/black"/>
@@ -204,7 +204,7 @@
                         android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/katzen_rosa_fuerte"
-                        android:fontFamily="@font/varela"
+                        android:fontFamily="@font/poppins_bold"
                         android:text="@string/btn_limpiar"
                         android:textSize="18dp" />
 
@@ -214,7 +214,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:fontFamily="@font/varela"
+                        android:fontFamily="@font/poppins_bold"
                         android:textSize="18dp"
                         android:backgroundTint="@color/katzen_rosa_fuerte"
                         android:layout_margin="5dp"
