--- a/app/src/main/res/layout/item_view_gridview.xml
+++ b/app/src/main/res/layout/item_view_gridview.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:fontFamily="@font/varela"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/app_name"
             android:textSize="20dp"/>
     </LinearLayout>
