--- a/app/src/main/res/layout/viajes_detalle_fragment.xml
+++ b/app/src/main/res/layout/viajes_detalle_fragment.xml
@@ -58,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Viaje"
+                android:fontFamily="@font/poppins_bold"
                 android:drawableLeft="@drawable/ic_mas_blanco"
                 android:layout_margin="5dp"/>
         </LinearLayout>
