--- a/app/src/main/res/layout/vista_agregar_mascota.xml
+++ b/app/src/main/res/layout/vista_agregar_mascota.xml
@@ -238,6 +238,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_weight="1"
                         android:text="Cancelar" />
 
@@ -247,6 +248,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
+                        android:fontFamily="@font/poppins_bold"
                         android:layout_weight="1"
                         android:text="Guardar" />
 
